# manga_translate

./: .gitignore  manga_translate.bat  pyproject.toml  requirements.txt
manga_translate/: __init__.py  cli.py  config.py  ocr.py  pipeline.py  screenshot.py  translator.py  websocket_server.py
tests/: test_pipeline.py
