[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga_translate"
version = "0.2.0"
description = "manga_ocr + translation: OCR and translate manga images"
requires-python = ">=3.8"
dependencies = [
    "manga-ocr>=0.1.9",
    "deep-translator>=1.11.0",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "pyperclip>=1.8.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
manga-translate = "manga_translate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["manga_translate*"]
